# libsqlglot

./: .gitignore  ANTLR_FEATURES.md  BUILD_AND_TEST.md  CHANGELOG.md  CMakeLists.txt  COMPLETE_IMPLEMENTATION_PLAN.md  DEVELOPMENT.md  DIALECT_AWARE_PROCEDURES_TODO.md  DOCKER_TRANSPILER.md  Dockerfile  Dockerfile.grammar-transpiler  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  MYSQL_COMPLEXITY.md  MYSQL_TRANSFORMATION.md  README.md  README.md.bak  STORED_PROCEDURE_STATUS.md  SUPPORTED_FEATURES.md  docker-compose.grammar-transpiler.yml  pyproject.toml  test_keyword_debug.cpp  test_keywords_simple.cpp
.githooks/: pre-commit
.github/workflows/: build-wheels.yml  ci.yml
benchmarks/: CMakeLists.txt  bench_comparison.py  bench_complete_comparison.py  bench_mad_queries.cpp  bench_mad_sqlglot_comparison.py  bench_parser.cpp  bench_tokenizer.cpp  bench_transpiler.cpp  sqlglot_comparison.cpp
benchmarks/mad_queries/: query1_deep_ctes_windows.sql  query2_deep_case.sql  query3_multiple_subqueries.sql  query4_complex_joins_windows.sql  query5_union_extract.sql  query6_string_concat.sql  query7_correlated_subqueries.sql  query8_complex_where.sql
compat/: README.md  sqlglot_compat.py
dialects/: README.md
dialects/patches/: bigquery.json  calcite.json  cockroachdb.json  databricks.json  db2.json  doris.json  dremio.json  druid.json  duckdb.json  dune.json  exasol.json  fabric.json  greenplum.json  impala.json  materialize.json  netezza.json  oracle.json  presto.json  redshift.json  risingwave.json  singlestore.json  solr.json  spark.json  spark2.json  tableau.json  tidb.json  timescaledb.json  vertica.json  yugabytedb.json
dialects/schema/: patch_schema.json
docs/: dialect_comparison.md
fuzzing/: README.md  collect_crash_samples.sh  continuous_fuzzing.sh  fuzz_edge_cases.cpp  fuzz_generator.cpp  fuzz_optimizer.cpp  fuzz_parser.cpp  monitor_all.sh  run_fuzzing_safe.sh  simple_fuzzer.cpp  test_crash_samples.cpp  test_fuzzer_debug.cpp  test_fuzzer_loop.cpp  test_generator_crash.cpp  test_minimal.cpp  test_minimal_gen.cpp  test_optimizer.cpp  test_optimizer_crash.cpp  test_optimizer_crashes.cpp  test_optimizer_recursion.cpp  test_random.cpp
include/libsqlglot/: arena.h  dialects.h  error_recovery.h  expression.h  fwd.h  generator.h  grammar_patterns.h  intern.h  keyword_reflection.h  keywords.h  operator_precedence.h  optimizer.h  parser.h  parser_advanced.h  schema.h  tokenizer.h  tokens.h  transpiler.h  type_checker.h
scripts/: antlr_feature_extractor.py  build_optimized.sh  comprehensive_test.sh  generate_keywords.py  install_hooks.sh  merge_grammar.py  profile_cpu.sh  profile_memory.sh  update_readme_metrics.sh  verify_dialects.py
scripts/antlr/: README.md  antlr_to_lemon.py  complexity_analyzer.py  cpp_generator.py  grammar_data_extractor.py  grammar_parser.py  grammar_transformer.py  keywords_generator.py  lemon_wrapper.py  token_mapping.py  transpile.py  unified_grammar_generator.py
src/: libsqlglot.cpp
src/python/: CMakeLists.txt  bindings.cpp
src/python/libsqlglot/: __init__.py  __main__.py
tests/: CMakeLists.txt  test_advanced_sql.cpp  test_all_dialects_comprehensive.cpp  test_arena.cpp  test_assignments.cpp  test_begin_end_blocks.cpp  test_call_keyword.cpp  test_create_procedure.cpp  test_cte_windows_subqueries.cpp  test_cursors.cpp  test_debug_pivot.cpp  test_declare_keyword.cpp  test_delimiter.cpp  test_dialect_coverage.cpp  test_dialect_transforms.cpp  test_dialect_transpilation.cpp  test_dml_statements.cpp  test_do_debug.cpp  test_end_to_end.cpp  test_error_messages.cpp  test_error_recovery.cpp  test_exceptions.cpp  test_extract.cpp  test_fk_check_constraints.cpp  test_for_keyword.cpp  test_for_loop.cpp  test_for_while_transpile.cpp  test_if_statement.cpp  test_intern.cpp  test_loop_break_continue.cpp  test_mad_queries.cpp  test_main.cpp  test_memory_leak.cpp  test_optimizer.cpp  test_parser.cpp  test_performance.cpp  test_procedure_dialects.cpp  test_raise.cpp  test_return_keyword.cpp  test_returns_comprehensive.cpp  (+10 more)
